--- a/styling/style.css
+++ b/styling/style.css
@@ -26,7 +26,7 @@ body {
   position: relative;
   display: flex;
   margin-left: auto !important;
-  padding-left: 20px;
+  padding-left: 10px;
   margin: 1rem;
   width: 60px;
   height: 30px;
